<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/addName"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"
            android:autofillHints="@string/name"
            android:inputType="text"
            tools:ignore="LabelFor" />
        <EditText
            android:id="@+id/addCount"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/count"
            android:hint="@string/item_count"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_margin="10dp"
            android:onClick="addItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>